--- a/UI/Views/Ticket/Partial/CreateTicket.cshtml
+++ b/UI/Views/Ticket/Partial/CreateTicket.cshtml
@@ -3,5 +3,6 @@
 @using (Html.BeginForm("CreateTicket", "Ticket", FormMethod.Post))
 {
     @Html.EditorForModel()
+    @* TODO Create dropdown for user selection *@
     <br /><button type="submit">Create ticket</button>
 }
