--- a/UI/Views/Auth/Login.cshtml
+++ b/UI/Views/Auth/Login.cshtml
@@ -12,10 +12,10 @@
     <button type="submit">Log in</button>
     if (ViewData["apiError"] != null)
     {
-        <text color="red">@ViewData["apiError"]</text>
+        <text>@ViewData["apiError"]</text>
     }
     if (ViewData["authError"] != null)
     {
-        <text color="red">Could not log in with given parameters. Please try a different e-mail address and/or password.</text>
+        <text>Could not log in with given parameters. Please try a different e-mail address and/or password.</text>
     }
 }
