--- a/UI/Views/User/Users.cshtml
+++ b/UI/Views/User/Users.cshtml
@@ -1,27 +1,48 @@
-﻿@model IEnumerable<NoSQL.Models.User>
+﻿@using System.Globalization
+@model IEnumerable<UserViewModel>
+
 @{
-    ViewData["Title"] = "Users";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "title";
+    Layout = "_Layout";
 }
 
-<table class="table table-bordered table-responsive table-hover">
+
+<h2>Users</h2>
+
+<table class="table">
+
     <tr>
         <th>Id </th>
         <th>First Name </th>
         <th>Last Name </th>
         <th>Email</th>
-        <th>Tickets</th>
-      
+        <th>Users</th>
+
     </tr>
-    @foreach (var u in Model)
+    @foreach (var user in Model)
     {
         <tr>
-            <td>@u.FirstName</td>
-            <td>@u.LastName</td>
-            <td>@u.EmailAddress</td>
+            <td>@user.EmailAddress</td>
+            <td>@user.FirstName, @user.LastName</td>
+            <td>@user.LastName</td>
 
         </tr>
 
     }
 </table>
+
+<br />
+<br />
+@await Html.PartialAsync("Partial/CreateUser", new UserViewModel())
+@* Easy segment for showing any potential modelstate errors *@
+
+@foreach (var modelState in ViewData.ModelState.Values)
+{
+    @foreach (var error in modelState.Errors)
+    {
+        <text>@error.ErrorMessage</text>
+    }
+}
+
+
 
