--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                         <a href="#" class="nav-link">Dashboard</a>
                     </li>
                     <li class="nav-item w-100">
-                        <a href="#" class="nav-link">Incident Management</a>
+                        <a href="@Url.Action("Index","Ticket")" class="nav-link">Incident Management</a>
                     </li>
                     <li class="nav-item w-100">
-                        <a href="#" class="nav-link">User Management</a>
+                        <a href="@Url.Action("Index","User")" class="nav-link">User Management</a>
                     </li>
                 </ul>
             </div>
