--- a/UI/Views/User/Index.cshtml
+++ b/UI/Views/User/Index.cshtml
@@ -8,32 +8,29 @@
 
 
 <h2>Users</h2>
-
+<button>@Html.ActionLink("Add new user", "CreateUser", "User")</button>
 <table class="table">
 
     <tr>
-        <th>Id </th>
         <th>First Name </th>
         <th>Last Name </th>
         <th>Email</th>
-        <th>Users</th>
 
     </tr>
     @foreach (var user in Model)
     {
-        <tr>
-            <td>@user.EmailAddress</td>
-            <td>@user.FirstName, @user.LastName</td>
-            <td>@user.LastName</td>
+    <tr>
+        <td>@user.FirstName</td>
+        <td>@user.LastName</td>
+        <td>@user.EmailAddress</td>
 
-        </tr>
+    </tr>
 
     }
 </table>
 
 <br />
 <br />
-@await Html.PartialAsync("Partial/CreateUser", new UserViewModel())
 @* Easy segment for showing any potential modelstate errors *@
 
 @foreach (var modelState in ViewData.ModelState.Values)
