--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -14,11 +14,11 @@
     <header>
 
         <a href="#" class="navbar-brand">TopDesk</a>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav nav-fill w-100 nav-justified">
                     <li class="nav-item w-100">
-                        <a href="#" class="nav-link">Dashboard</a>
+                        <a href="@Url.Action("Index", "Home")" class="nav-link">Dashboard</a>
                     </li>
                     <li class="nav-item w-100">
                         <a href="#" class="nav-link">Incident Management</a>
