--- a/UI/wwwroot/css/custom.css
+++ b/UI/wwwroot/css/custom.css
@@ -1,3 +1,32 @@
 ﻿.nav-link:hover {
     background-color: rgba(0,0,0,0.1);
 }
+
+@media (min-width: 768px) {
+    .container-small {
+        width: 300px;
+    }
+    .container-large {
+        width: 970px;
+    }
+}
+@media (min-width: 992px) {
+    .container-small {
+        width: 500px;
+    }
+    .container-large {
+        width: 1170px;
+    }
+}
+@media (min-width: 1200px) {
+    .container-small {
+        width: 700px;
+    }
+    .container-large {
+        width: 1500px;
+    }
+}
+
+.container-small, .container-large {
+    max-width: 100%;
+}
