--- a/UI/Views/Ticket/CreateTicket.cshtml
+++ b/UI/Views/Ticket/CreateTicket.cshtml
@@ -15,5 +15,11 @@
     <br>
     <br>
     <h6>Deadline</h6>
+    <br>
+    <br>
+    <h6>Description</h6>
+    <textarea id="Description" rows="4" cols="30"></textarea>
+    <br>
+    <br>
     <button type="submit">Create ticket</button>
 }
