--- a/UI/Views/User/CreateUser.cshtml
+++ b/UI/Views/User/CreateUser.cshtml
@@ -23,7 +23,7 @@
     @Html.DropDownListFor(x => x.Type, Html.GetEnumSelectList<NoSQL.Models.UserType>())
     <br>
     <br>
-    <h6>Phonen Number</h6>
+    <h6>Phone Number</h6>
     <input id="PhoneNumber" type="text" />
     <br>
     <br>
