--- a/UI/Views/Home/DashboardEmployee.cshtml
+++ b/UI/Views/Home/DashboardEmployee.cshtml
@@ -1,8 +1,77 @@
-﻿
+﻿@using System.Globalization
+@model List<TicketViewModel>
 
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+
+<div class="container">
+    <div class="row p-5">
+        <div class="col-md-9">
+            <h2>Your tickets</h2>
+        </div>
+        <div class="col-md-3">
+            <a href="@Url.Action("Index", "Ticket")">
+                <button class="btn btn-primary">Show List</button>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <svg
+                class="progress-ring"
+                height="120"
+                width="120">
+                <circle class="progress-ring__circle"
+                        stroke-width="5"
+                        fill="transparent"
+                        r="50"
+                        cx="60"
+                        cy="60"/>
+            </svg>
+        </div>
+        <div class="col-md-6">
+            <svg
+                class="progress-ring"
+                height="120"
+                width="120">
+                <circle class="progress-ring__circle"
+                        stroke-width="5"
+                        fill="transparent"
+                        r="50"
+                        cx="60"
+                        cy="60"/>
+            </svg>
+        </div>
+    </div>
+    <div class="row">
+        <table class="table">
+            <tr>
+                <th>Id</th>
+                <th>Subject</th>
+                <th>User</th>
+                <th>Date reported</th>
+                <th>Deadline</th>
+            </tr>
+            @if (Model.Count == 0)
+            {
+                <td colspan="5">There are no tickets to show.</td>
+            }
+            else
+            {
+                foreach (var ticket in Model)
+                {
+                    <tr>
+                        <td>@ticket.Id</td>
+                        <td>@ticket.Subject</td>
+                        <td>@ticket.User.LastName, @ticket.User.FirstName</td>
+                        <td>@ticket.DateReported.ToString("dd/MM/yyyy", CultureInfo.InvariantCulture)</td>
+                        <td>@ticket.Deadline</td>
+                    </tr>
+                }
+            }
+        </table>
+    </div>
+</div>
